--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"url": "git+https://github.com/magic-akari/libheic.git"
 	},
 	"bin": {
-		"heic": "./heic.js"
+		"heic": "heic.js"
 	},
 	"keywords": [
 		"heif",
